<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<parent>
		<groupId>org.eclipse.xtext.todo</groupId>
		<artifactId>org.eclipse.xtext.todo.config.parent</artifactId>
		<version>0.3.0-SNAPSHOT</version>
		<relativePath>../../releng/org.eclipse.xtext.todo.config.parent/pom.xml</relativePath>
	</parent>	
	
	<groupId>org.eclipse.xtext.todo</groupId>
	<artifactId>org.eclipse.xtext.todo.repository.parent</artifactId>
	<version>0.3.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<junit-version>4.8.1</junit-version>
		<eclipse-site>http://download.eclipse.org/releases/${platform-version-name}</eclipse-site>
		<orbit-site>http://download.eclipse.org/tools/orbit/downloads/drops/R20130118183705/repository</orbit-site>
		<platform-version>[3.7,4.3)</platform-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<target-platform-version>0.3.0-SNAPSHOT</target-platform-version>
		<maven-resources-plugin-version>2.6</maven-resources-plugin-version>
		<maven-antrun-plugin-version>1.7</maven-antrun-plugin-version>
		<maven-surefire-plugin-version>2.16</maven-surefire-plugin-version>
		<maven-assembly-plugin-version>2.4</maven-assembly-plugin-version>
		<build-helper-maven-plugin-version>1.8</build-helper-maven-plugin-version>
		<fornax-oaw-m2-plugin-version>3.4.0</fornax-oaw-m2-plugin-version>
		<xtend-maven-plugin-version>2.4.3</xtend-maven-plugin-version>
		<xtend-library-version>2.4.3</xtend-library-version>
		<memoryArgs>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</memoryArgs>
		<encodingArgs>-Dfile.encoding=${file.encoding}</encodingArgs>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<resolver>p2</resolver>
					<pomDependencies>consider</pomDependencies>
					<target>
						<artifact>
							<groupId>org.eclipse.xtext.todo</groupId>
							<artifactId>org.eclipse.xtext.todo.targetplatform</artifactId>
							<version>${target-platform-version}</version>
						</artifact>
					</target>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>attach-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<encoding>${project.encoding}</encoding>
						<source>6.0</source>
						<target>6.0</target>
						<verbose>true</verbose>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>maven-osgi-test-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-repository-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin-version}</version>
					<configuration>
						<encoding>${project.encoding}</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>${maven-antrun-plugin-version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin-version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven-assembly-plugin-version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>${build-helper-maven-plugin-version}</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>src-gen</source>
								</sources>
								<sources>
									<source>${project.build.directory}/xtend-gen</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.fornax.toolsupport</groupId>
					<artifactId>fornax-oaw-m2-plugin</artifactId>
					<version>${fornax-oaw-m2-plugin-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>${xtend-maven-plugin-version}</version>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<outputDirectory>${basedir}/xtend-gen</outputDirectory>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.eclipse.xtend</groupId>
							<artifactId>org.eclipse.xtend.lib</artifactId>
							<version>${xtend-library-version}</version>
							<type>pom</type>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<profiles>
		<profile>
			<id>platform-kepler</id>
			<activation>
				<property>
					<name>platform-version-name</name>
					<value>indigo</value>
				</property>
			</activation>
			<properties>
				<eclipse-site>http://download.eclipse.org/releases/kepler</eclipse-site>
				<platform-version>${platform-version}</platform-version>
			</properties>
		</profile>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<name>mac os x</name>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
			</properties>
		</profile>
		<profile>
			<id>other-os</id>
			<activation>
				<os>
					<name>not-mac</name>
					<family>!mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
			</properties>
		</profile>
		<profile>
			<id>sonarLocal</id>
			<properties>
				<sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
				<sonar.jdbc.driverClassName>com.mysql.jdbc.Driver</sonar.jdbc.driverClassName>
				<sonar.jdbc.username>sonar</sonar.jdbc.username>
				<sonar.jdbc.password>sonar</sonar.jdbc.password>
				<sonar.host.url>http://localhost:9000/</sonar.host.url>
				<sonar.java.source>1.6</sonar.java.source>
				<sonar.java.target>1.6</sonar.java.target>				
				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
			</properties> 
		</profile>
		<profile>
			<id>sonarRemote</id>
			<properties>
				<sonar.jdbc.url>jdbc:mysql://ec2-174-129-80-78.compute-1.amazonaws.com:3306/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
				<sonar.jdbc.driverClassName>com.mysql.jdbc.Driver</sonar.jdbc.driverClassName>
				<sonar.jdbc.username>sonar</sonar.jdbc.username>
				<sonar.jdbc.password>sonar</sonar.jdbc.password>
				<sonar.host.url>http://ec2-174-129-80-78.compute-1.amazonaws.com:9000/sonar</sonar.host.url>
				<sonar.java.source>1.6</sonar.java.source>
				<sonar.java.target>1.6</sonar.java.target>				
				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
			</properties> 
		</profile>
		<profile>
			<id>noCodeCoverage</id>
			<activation>
				<property>
					<name>!codeCoverage</name>
				</property>
			</activation>
			<properties>
				<coverageAgent></coverageAgent>
				<it.coverage.argLine></it.coverage.argLine>
			</properties>
		</profile>		
		<profile>
			<id>codeCoverage</id>
			<properties>
				<jacoco.version>0.6.3.201306030806</jacoco.version>
				<jacoco.destFile>${project.basedir}/../../releng/org.eclipse.xtext.todo.parent/target/jacoco.exec</jacoco.destFile>
				<jacoco.it.destFile>${project.basedir}/../../releng/org.eclipse.xtext.todo.parent/target/jacoco_it.exec</jacoco.it.destFile>
				<!-- Sonar -->
				<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
				<sonar.jacoco.reportPath>${jacoco.destFile}</sonar.jacoco.reportPath>
				<sonar.surefire.reportsPath>../${project.artifactId}.tests/target/surefire-reports/</sonar.surefire.reportsPath>
				<sonar.jacoco.itReportPath>${jacoco.it.destFile}</sonar.jacoco.itReportPath>
				<!--sonar.skippedModules>plugin.tests</sonar.skippedModules-->				
			</properties> 
			<build>
				<plugins>			
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco.version}</version>
						<executions>
							<execution>
								<id>pre-unit-test</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>pre-integration-test</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
								<configuration>
									<destFile>${jacoco.it.destFile}</destFile>
									<propertyName>it.coverage.argLine</propertyName>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>				
	</profiles>
</project>
